Remove metadata implementation
Signed-off-by: Mikayla Thompson <thomika@amazon.com>